--- a/src/components/index.html
+++ b/src/components/index.html
@@ -11,16 +11,9 @@
 
 <body>
     <input id="button" type="button" value="play!">
+    <input type="range" id="time" name="time" min="0" max="30">
     <script src="https://tonejs.github.io/build/Tone.js"></script>
-    <script>
-        const synth = new Tone.Synth().toMaster();
-
-        const btn = document.getElementById("button");
-
-        btn.addEventListener("click", e => {
-            synth.triggerAttackRelease("C4", "8n"); // 8分音符「♪」の、「ド」を弾く
-        });
-    </script>
+    <script src="index.js"></script>
 </body>
 
 </html>
