--- a/ios/hitokoto2/LaunchScreen.storyboard
+++ b/ios/hitokoto2/LaunchScreen.storyboard
@@ -6,6 +6,7 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15704"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
+        <Capabilities><uap3:Capability Name="backgroundMediaPlayback"/></Capabilities>
     </dependencies>
     <scenes>
         <!--View Controller-->
